[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curse-checker"
version = "1.0.0"
description = "面向恐怖游戏开发者的命令行分支剧情分析工具"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Curse Checker Team" }
]
keywords = ["game", "horror", "script", "analysis", "branching-story"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
curse-checker = "curse_checker.cli:main"

[tool.setuptools.packages.find]
include = ["curse_checker*"]
